# qingstor-sdk-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/request/: request.rs
src/service/: bucket.rs  qingstor.rs
