[package]
name = "qingstor-sdk-rs"
version = "0.1.0"
authors = []

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "^0.8"
log = "^0.4"
reqwest = "^0.9.1"
sha2 = "^0.6.0"
md5 = "^0.6.1"
url = "^1.5.1"
rust-ini = "^0.9"
dirs = "^1.0"
base64 = "0.10.1"
chrono = "^0.4.0"
error-chain = "^0.10.0"
hex = "^0.2.0"
hmac = "^0.4.2"

